feat: add team and bug fixes

--- a/frontend/src/styles/_global.scss
+++ b/frontend/src/styles/_global.scss
@@ -10,6 +10,7 @@
 @forward 'components/layout/shared_footer';
 @forward 'components/layout/shared_header';
 @forward 'components/sections/shared_section-sponsor';
+@forward 'components/ui/about_card-team';
 @forward 'components/ui/home_advantage';
 @forward 'components/ui/home_card-benefit';
 @forward 'components/ui/home_card-news';
