--- a/frontend/src/styles/components/common/_shared_link.scss
+++ b/frontend/src/styles/components/common/_shared_link.scss
@@ -29,3 +29,11 @@
         }
     }
 }
+
+.about-page {
+    .link {
+        &-team-join {
+            @extend %about_link-team-join;
+        }
+    }
+}
