--- a/frontend/src/styles/utils/_lists.scss
+++ b/frontend/src/styles/utils/_lists.scss
@@ -53,7 +53,10 @@ $text-list: (
     "home_text-card-review-author-role" "Inter" medium normal "neutral-60" normal 12px 16px,
     "about_text-main-card-title" "Inter" semi-bold normal "neutral-100" normal 18px 32px,
     "about_text-main-card-description" "Inter" medium normal "neutral-60" 1.5 14px 18px,
-    "about_text-ideas-title-subheading" "Inter" semi-bold normal "neutral-100" 1.5 14px 24px
+    "about_text-ideas-title-subheading" "Inter" semi-bold normal "neutral-100" 1.5 14px 24px,
+    "about_text-card-team-name" "Inter" semi-bold normal "neutral-100" normal 16px 24px,
+    "about_text-card-team-role" "Inter" regular normal "neutral-60" normal 14px 18px,
+    "about_link-team-join" "Inter" semi-bold normal "neutral-100" normal 14px 16px
 );
 
 $dynamic-text-list: ();
