--- a/frontend/src/styles/components/common/_shared_link.scss
+++ b/frontend/src/styles/components/common/_shared_link.scss
@@ -37,3 +37,11 @@
         }
     }
 }
+
+.blog-page {
+    .link {
+        &-card-blog-name {
+            @extend %blog_link-card-blog-name;
+        }
+    }
+}
