--- a/frontend/src/styles/utils/_lists.scss
+++ b/frontend/src/styles/utils/_lists.scss
@@ -56,7 +56,10 @@ $text-list: (
     "about_text-ideas-title-subheading" "Inter" semi-bold normal "neutral-100" 1.5 14px 24px,
     "about_text-card-team-name" "Inter" semi-bold normal "neutral-100" normal 16px 24px,
     "about_text-card-team-role" "Inter" regular normal "neutral-60" normal 14px 18px,
-    "about_link-team-join" "Inter" semi-bold normal "neutral-100" normal 14px 16px
+    "about_link-team-join" "Inter" semi-bold normal "neutral-100" normal 14px 16px,
+    "blog_text-button-activity" "Inter" semi-bold normal "neutral-60" normal 14px 16px,
+    "blog_link-card-blog-name" "Inter" semi-bold normal "neutral-100" normal 16px 32px,
+    "blog_text-card-blog-description" "Inter" regular normal "neutral-60" normal 12px 14px,
+    "blog_text-card-blog-text" "Inter" regular normal "neutral-60" 1.5 14px 20px,
 );
 
-$dynamic-text-list: ();
