--- a/frontend/src/styles/utils/_templates.scss
+++ b/frontend/src/styles/utils/_templates.scss
@@ -33,36 +33,6 @@
   }
 }
 
-@each $item in $dynamic-text-list {
-  $name: list.nth($item, 1);
-  $font-family: list.nth($item, 2);
-  $font-weight: list.nth($item, 3);
-  $font-style: list.nth($item, 4);
-  $color: list.nth($item, 5);
-  $hover-color: list.nth($item, 6);
-  $font-size: list.nth($item, 7);
-  $desktop-font-size: list.nth($item, 8);
-
-  %#{$name} {
-    cursor: pointer;
-    transition: all 0.5s ease-in-out;
-    font-family: $font-family;
-    font-weight: font-weight($font-weight);
-    font-style: $font-style;
-    color: $color;
-    font-size: $font-size;
-    &:hover {
-      transition: all 0.5s ease-in-out;
-      color: $hover-color;
-    }
-    @if $font-size != $desktop-font-size {
-      @include respond-to(desktop) {
-        font-size: $desktop-font-size;
-      }
-    }
-  }
-}
-
 %container {
   @include size(default, 335px);
   @include spacing(margin, x, auto);
@@ -129,5 +99,17 @@
     transition: all 0.2s ease-in-out;
     color: color(neutral-10);
     background-color: color(neutral-100);
+  }
+}
+
+%blog_button-activity {
+  @extend %blog_text-button-activity;
+  @include spacing(padding, (x, y), 12px, 8px);
+  transition: all 0.4s ease-in-out;
+  text-underline-offset: 4px;
+  &:hover {
+    transition: all 0.4s ease-in-out;
+    color: color(neutral-100);
+    text-decoration: underline;
   }
 }
