feat: add report and other fixes

--- a/frontend/src/styles/_global.scss
+++ b/frontend/src/styles/_global.scss
@@ -12,6 +12,7 @@
 @forward 'components/sections/shared_section-sponsor';
 @forward 'components/ui/about_card-team';
 @forward 'components/ui/blog_card-blog';
+@forward 'components/ui/blog_card-report';
 @forward 'components/ui/home_advantage';
 @forward 'components/ui/home_card-benefit';
 @forward 'components/ui/home_card-news';
