--- a/frontend/src/styles/utils/_lists.scss
+++ b/frontend/src/styles/utils/_lists.scss
@@ -57,9 +57,11 @@ $text-list: (
     "about_text-card-team-name" "Inter" semi-bold normal "neutral-100" normal 16px 24px,
     "about_text-card-team-role" "Inter" regular normal "neutral-60" normal 14px 18px,
     "about_link-team-join" "Inter" semi-bold normal "neutral-100" normal 14px 16px,
-    "blog_text-button-activity" "Inter" semi-bold normal "neutral-60" normal 14px 16px,
+    "blog_button-activity" "Inter" semi-bold normal "neutral-60" normal 14px 16px,
     "blog_link-card-blog-name" "Inter" semi-bold normal "neutral-100" normal 16px 32px,
     "blog_text-card-blog-description" "Inter" regular normal "neutral-60" normal 12px 14px,
     "blog_text-card-blog-text" "Inter" regular normal "neutral-60" 1.5 14px 20px,
+    "blog_link-card-report-link" "Inter" semi-bold normal "neutral-10" normal 18px 40px,
+    "blog_text-card-report-description" "Inter" medium normal "neutral-60" 1.5 14px 16px,
 );
 
