feat: add articles

--- a/frontend/src/styles/_global.scss
+++ b/frontend/src/styles/_global.scss
@@ -11,6 +11,7 @@
 @forward 'components/layout/shared_header';
 @forward 'components/sections/shared_section-sponsor';
 @forward 'components/ui/about_card-team';
+@forward 'components/ui/blog_card-article';
 @forward 'components/ui/blog_card-blog';
 @forward 'components/ui/blog_card-report';
 @forward 'components/ui/home_advantage';
@@ -21,6 +22,7 @@
 @forward 'components/ui/home_card-sales-report';
 @forward 'components/ui/home_card-statistic';
 @forward 'components/ui/home_result';
+@forward 'components/ui/shared_arrows';
 @forward 'components/ui/shared_nav';
 @forward 'components/ui/shared_slider';
 @forward 'components/ui/shared_title';
