--- a/frontend/src/styles/components/common/_shared_buttons.scss
+++ b/frontend/src/styles/components/common/_shared_buttons.scss
@@ -20,6 +20,11 @@
         &-activity {
             @extend %blog_button-activity;
         }
+        &-article {
+            @extend %blog_button-article;
+        }
     }
 }
+
+
 
