--- a/frontend/src/styles/components/common/_shared_text.scss
+++ b/frontend/src/styles/components/common/_shared_text.scss
@@ -22,12 +22,6 @@
     &-title-subheading-small {
         @extend %shared_text-title-subheading-small;
     }
-    &-button-black {
-        @extend %shared_text-button-black;
-    }
-    &-button-white {
-        @extend %shared_text-button-white;
-    }
     &-footer-nav-title {
         @extend %shared_text-footer-nav-title;
     }
@@ -143,6 +137,12 @@
         }
         &-card-report-description {
             @extend %blog_text-card-report-description;
+        }
+        &-card-article-title {
+            @extend %blog_text-card-article-title;
+        }
+        &-card-article-description {
+            @extend %blog_text-card-article-description;
         }
     }
 }
