--- a/frontend/src/styles/utils/_lists.scss
+++ b/frontend/src/styles/utils/_lists.scss
@@ -23,8 +23,8 @@ $text-list: (
     "shared_text-title-heading-second-black" "Inter" bold normal "neutral-100" normal 24px 56px,
     "shared_text-title-heading-second-white" "Inter" semi-bold normal "neutral-10" normal 24px 56px,
     "shared_text-title-subheading-small" "Inter" medium normal "neutral-60" 1.65 14px 18px,
-    "shared_text-button-black" "Inter" semi-bold normal "neutral-10" normal 12px 16px,
-    "shared_text-button-white" "Inter" semi-bold normal "neutral-100" normal 12px 16px,
+    "shared_button-black" "Inter" semi-bold normal "neutral-10" normal 12px 16px,
+    "shared_button-white" "Inter" semi-bold normal "neutral-100" normal 12px 16px,
     "home_text-main-image" "Inter" bold normal "neutral-100" normal 16px 20px,
     "home_input-main" "Inter" medium normal "neutral-100" normal 16px 18px,
     "home_input-main-placeholder" "Inter" medium normal "neutral-60" normal 14px 16px,
@@ -63,5 +63,8 @@ $text-list: (
     "blog_text-card-blog-text" "Inter" regular normal "neutral-60" 1.5 14px 20px,
     "blog_link-card-report-link" "Inter" semi-bold normal "neutral-10" normal 18px 40px,
     "blog_text-card-report-description" "Inter" medium normal "neutral-60" 1.5 14px 16px,
+    "blog_text-card-article-title" "Inter" semi-bold normal "neutral-100" normal 18px 32px,
+    "blog_text-card-article-description" "Inter" medium normal "neutral-60" normal 14px 18px,
+    "blog_button-article" "Inter" bold normal "neutral-100" normal 14px 16px,
 );
 
