--- a/frontend/src/styles/utils/_lists.scss
+++ b/frontend/src/styles/utils/_lists.scss
@@ -65,6 +65,8 @@ $text-list: (
     "blog_text-card-report-description" "Inter" medium normal "neutral-60" 1.5 14px 16px,
     "blog_text-card-article-title" "Inter" semi-bold normal "neutral-100" normal 18px 32px,
     "blog_text-card-article-description" "Inter" medium normal "neutral-60" normal 14px 18px,
-    "blog_button-article" "Inter" bold normal "neutral-100" normal 14px 16px,
+    "shared_button-grey" "Inter" bold normal "neutral-100" normal 14px 16px,
+    "pricing_text-main-description" "Inter" medium normal "iris-hover" normal 14px 16px,
+    "pricing_text-main-label" "Inter" medium normal "neutral-60" normal 14px 16px,
 );
 
