--- a/frontend/src/styles/utils/_templates.scss
+++ b/frontend/src/styles/utils/_templates.scss
@@ -105,7 +105,7 @@
   }
 }
 
-%blog_button-article {
+%shared_button-grey {
   @include spacing(padding, (x, y), 24px, 12px);
   transition: all 0.4s ease-in-out;
   border-radius: 100px;
