feat: add pricing cards

--- a/frontend/src/styles/_global.scss
+++ b/frontend/src/styles/_global.scss
@@ -22,6 +22,7 @@
 @forward 'components/ui/home_card-sales-report';
 @forward 'components/ui/home_card-statistic';
 @forward 'components/ui/home_result';
+@forward 'components/ui/pricing_card-pricing';
 @forward 'components/ui/shared_arrows';
 @forward 'components/ui/shared_nav';
 @forward 'components/ui/shared_slider';
