--- a/frontend/src/styles/utils/_lists.scss
+++ b/frontend/src/styles/utils/_lists.scss
@@ -23,8 +23,8 @@ $text-list: (
     "shared_text-title-heading-second-black" "Inter" bold normal "neutral-100" normal 24px 56px,
     "shared_text-title-heading-second-white" "Inter" semi-bold normal "neutral-10" normal 24px 56px,
     "shared_text-title-subheading-small" "Inter" medium normal "neutral-60" 1.65 14px 18px,
-    "shared_button-black" "Inter" semi-bold normal "neutral-10" normal 12px 16px,
-    "shared_button-white" "Inter" semi-bold normal "neutral-100" normal 12px 16px,
+    "shared_button-black" "Inter" semi-bold normal "neutral-10" normal 14px 16px,
+    "shared_button-white" "Inter" semi-bold normal "neutral-100" normal 14px 16px,
     "home_text-main-image" "Inter" bold normal "neutral-100" normal 16px 20px,
     "home_input-main" "Inter" medium normal "neutral-100" normal 16px 18px,
     "home_input-main-placeholder" "Inter" medium normal "neutral-60" normal 14px 16px,
@@ -65,8 +65,20 @@ $text-list: (
     "blog_text-card-report-description" "Inter" medium normal "neutral-60" 1.5 14px 16px,
     "blog_text-card-article-title" "Inter" semi-bold normal "neutral-100" normal 18px 32px,
     "blog_text-card-article-description" "Inter" medium normal "neutral-60" normal 14px 18px,
-    "shared_button-grey" "Inter" bold normal "neutral-100" normal 14px 16px,
+    "shared_button-grey" "Inter" semi-bold normal "neutral-100" normal 14px 16px,
     "pricing_text-main-description" "Inter" medium normal "iris-hover" normal 14px 16px,
     "pricing_text-main-label" "Inter" medium normal "neutral-60" normal 14px 16px,
+    "pricing_text-card-pricing-header-notice-text" "Inter" medium normal "neutral-10" normal 14px 14px,
+    "pricing_text-card-pricing-title-white" "Inter" semi-bold normal "neutral-10" normal 24px 24px,
+    "pricing_text-card-pricing-title-black" "Inter" semi-bold normal "neutral-100" normal 24px 24px,
+    "pricing_text-card-pricing-description" "Inter" medium normal "neutral-60" normal 14px 16px,
+    "pricing_text-card-pricing-price-white" "Inter" semi-bold normal "neutral-10" normal 32px 56px,
+    "pricing_text-card-pricing-price-black" "Inter" semi-bold normal "neutral-100" normal 32px 56px,
+    "pricing_text-card-pricing-period" "Inter" medium normal "neutral-60" normal 16px 16px,
+    "pricing_text-card-pricing-features-white" "Inter" bold normal "neutral-10" normal 16px 16px,
+    "pricing_text-card-pricing-features-black" "Inter" bold normal "neutral-100" normal 16px 16px,
+    "pricing_text-card-pricing-feature-white" "Inter" medium normal "neutral-10" normal 14px 16px,
+    "pricing_text-card-pricing-feature-black" "Inter" medium normal "neutral-100" normal 14px 16px,
+    "pricing_text-card-pricing-feature-disabled" "Inter" medium normal "neutral-60" normal 14px 16px,
 );
 
