feat: add questions

--- a/frontend/src/styles/_global.scss
+++ b/frontend/src/styles/_global.scss
@@ -23,6 +23,7 @@
 @forward 'components/ui/home_card-statistic';
 @forward 'components/ui/home_result';
 @forward 'components/ui/pricing_card-pricing';
+@forward 'components/ui/pricing_question';
 @forward 'components/ui/shared_arrows';
 @forward 'components/ui/shared_nav';
 @forward 'components/ui/shared_slider';
