--- a/frontend/src/styles/utils/_lists.scss
+++ b/frontend/src/styles/utils/_lists.scss
@@ -80,5 +80,7 @@ $text-list: (
     "pricing_text-card-pricing-feature-white" "Inter" medium normal "neutral-10" normal 14px 16px,
     "pricing_text-card-pricing-feature-black" "Inter" medium normal "neutral-100" normal 14px 16px,
     "pricing_text-card-pricing-feature-disabled" "Inter" medium normal "neutral-60" normal 14px 16px,
+    "pricing_text-question-title" "Inter" semi-bold normal "neutral-100" normal 16px 24px,
+    "pricing_text-question-answer" "Inter" medium normal "neutral-60" 1.5 14px 18px
 );
 
