--- a/frontend/src/styles/utils/_lists.scss
+++ b/frontend/src/styles/utils/_lists.scss
@@ -81,6 +81,11 @@ $text-list: (
     "pricing_text-card-pricing-feature-black" "Inter" medium normal "neutral-100" normal 14px 16px,
     "pricing_text-card-pricing-feature-disabled" "Inter" medium normal "neutral-60" normal 14px 16px,
     "pricing_text-question-title" "Inter" semi-bold normal "neutral-100" normal 16px 24px,
-    "pricing_text-question-answer" "Inter" medium normal "neutral-60" 1.5 14px 18px
+    "pricing_text-question-answer" "Inter" medium normal "neutral-60" 1.5 14px 18px,
+    "contact_text-main-address-global" "Inter" semi-bold normal "neutral-90" normal 8px 14px,
+    "contact_text-main-address-full" "Inter" regular normal "neutral-60" normal 7px 12px,
+    "contact_text-card-contact-name" "Inter" bold normal "neutral-100" normal 16px 24px,
+    "contact_text-card-contact-description" "Inter" regular normal "neutral-60" normal 14px 16px,
+    "contact_text-card-contact-info" "Inter" medium normal "neutral-100" normal 14px 16px,
 );
 
